@@ -1,4 +1,5 @@
 	* resistance towards certain flood attacks
+	* optimized disk I/O cache clearing
 	* added feature to ask a torrent if it needs to save its resume data or not
 	* added setting to ignore file modification time when loading resume files
 	* support more fine-grained torrent states between which peer sources it
